--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,10 @@
 <resources>
     <!-- Splash Screen Api -->
     <style name="Theme.CustomSplashScreenTheme" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/theme</item>
+        <item name="windowSplashScreenBackground">@color/black</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/ss_logo</item>
         <item name="windowSplashScreenAnimationDuration">1500</item>
-        <item name="postSplashScreenTheme">@style/Theme.Vision</item>
+        <item name="postSplashScreenTheme">@style/Theme.SignIn</item>
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
@@ -25,4 +25,11 @@
         <!-- Navigation bar color -->
         <item name="android:navigationBarColor">@color/background</item>
     </style>
+
+    <!-- Sign in theme. -->
+    <style name="Theme.SignIn" parent="Theme.Vision">
+        <!-- Navigation bar color -->
+        <item name="android:navigationBarColor">@color/black</item>
+    </style>
+
 </resources>
