--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -8,55 +8,64 @@
     tools:context=".SignInActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/signin_bg"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintBottom_toBottomOf="@+id/signin_bg_gradient"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/sample_image3" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/signin_bg_gradient"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
+        android:background="@drawable/img_gradient"
+        app:layout_constraintBottom_toTopOf="@+id/signin_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/img_gradient" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/signin_title1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="-4dp"
         android:fontFamily="@font/bold"
         android:text="Everyone"
         android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView4"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/signin_ott_icon1"
+        app:layout_constraintStart_toStartOf="@+id/sigin_guideline" />
+
+    <TextView
+        android:id="@+id/signin_title2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="-4dp"
+        android:fontFamily="@font/bold"
+        android:text="Endless Entertainment for"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/signin_title1"
+        app:layout_constraintStart_toStartOf="@+id/sigin_guideline" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/sign_in_button"
+        android:id="@+id/signin_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="22dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="28dp"
         android:background="@drawable/button_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="@+id/sigin_guideline">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/signin_google_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -70,11 +79,11 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintStart_toEndOf="@+id/signin_google_ic"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/signin_google_ic"
             android:layout_width="18dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
@@ -86,66 +95,42 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="50dp"
-        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_disney_hotstar" />
+        android:id="@+id/signin_ott_icon1"
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="-3dp"
+        android:layout_marginBottom="18dp"
+        android:scaleType="fitStart"
+        app:layout_constraintBottom_toTopOf="@id/signin_button"
+        app:layout_constraintStart_toStartOf="@+id/sigin_guideline"
+        app:srcCompat="@drawable/ott_icons1" />
 
     <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="54dp"
-        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:srcCompat="@drawable/ic_sony_liv" />
+        android:id="@+id/sigin_ott_icon2"
+        android:layout_width="200dp"
+        android:layout_height="0dp"
+        android:scaleType="fitStart"
+        app:layout_constraintBottom_toBottomOf="@+id/signin_ott_icon1"
+        app:layout_constraintStart_toEndOf="@+id/signin_ott_icon1"
+        app:layout_constraintTop_toTopOf="@+id/signin_ott_icon1"
+        app:srcCompat="@drawable/ott_icons2" />
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="54dp"
-        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
-        app:layout_constraintStart_toEndOf="@+id/imageView5"
-        app:srcCompat="@drawable/ic_zee5" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="45dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="54dp"
-        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:srcCompat="@drawable/ic_voot" />
-
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginBottom="54dp"
-        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
-        app:layout_constraintStart_toEndOf="@+id/imageView7"
-        app:srcCompat="@drawable/ic_amazon_prime" />
-
-    <TextView
-        android:id="@+id/textView2"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/sigin_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="-4dp"
-        android:fontFamily="@font/bold"
-        android:text="Endless Entertainment for"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="24dp" />
+
+    <ImageView
+        android:id="@+id/signin_logo"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="-8dp"
+        android:layout_marginBottom="18dp"
+        android:scaleType="fitStart"
+        app:layout_constraintBottom_toTopOf="@+id/signin_title2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_logo_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
