--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,10 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="theme">#CD000A</color>
-    <color name="background">#FFFFFFFF</color>
+    <color name="background">#F4F4F4</color>
+    <color name="surface">#FFFFFF</color>
+
+    <color name="logo">#FF000000</color>
 
     <color name="theme_black">#221F1F</color>
     <color name="theme_white">#F5F5F1</color>
