ott options & top 10 ui

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:fontFamily="@font/regular"
+        android:fontFamily="@font/poppins_regular"
         android:text="Log out"
         android:textColor="@color/theme"
         android:textSize="16sp"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:fontFamily="@font/regular"
+        android:fontFamily="@font/poppins_regular"
         android:text="Name:"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/about_guideline"
@@ -63,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="-2dp"
-        android:fontFamily="@font/bold"
+        android:fontFamily="@font/poppins_bold"
         android:text="Raj Maru"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/about_guideline"
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/regular"
+        android:fontFamily="@font/poppins_regular"
         android:text="Email:"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/about_guideline"
@@ -85,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="-2dp"
-        android:fontFamily="@font/bold"
+        android:fontFamily="@font/poppins_bold"
         android:text="Rajmaru0304@gmail.com"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/about_guideline"
