--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,8 @@
                 <ImageView
                     android:layout_width="130dp"
                     android:layout_height="40dp"
-                    android:layout_marginStart="-10dp"
-                    android:layout_marginTop="6dp"
+                    android:layout_marginStart="-19dp"
+                    android:layout_marginTop="4dp"
                     android:scaleType="fitStart"
                     android:src="@drawable/ic_logo_name"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -40,8 +40,8 @@
                     android:id="@+id/toolbar_settings"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginEnd="18dp"
                     android:layout_marginBottom="2dp"
                     app:cardBackgroundColor="@color/surface"
                     app:cardCornerRadius="24dp"
@@ -104,17 +104,17 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
+        android:id="@+id/home_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
+        app:layout_constraintGuide_begin="18dp" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/home_slider"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appbar_layout" />
@@ -125,6 +125,37 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/home_slider" />
+
+    <TextView
+        android:id="@+id/top10_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/gilroy_bold"
+        android:text="TOP 10"
+        android:textColor="@color/logo"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/home_guideline"
+        app:layout_constraintTop_toBottomOf="@+id/ott_rv" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/top10_rv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top10_tv" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/ott_rv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="26dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_slider" />
