--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="-4dp"
-        android:fontFamily="@font/bold"
+        android:fontFamily="@font/poppins_bold"
         android:text="Everyone"
         android:textColor="@color/white"
         android:textSize="18sp"
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="-4dp"
-        android:fontFamily="@font/bold"
+        android:fontFamily="@font/poppins_bold"
         android:text="Endless Entertainment for"
         android:textColor="@color/white"
         android:textSize="18sp"
@@ -71,7 +71,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="7dp"
-            android:fontFamily="@font/regular"
+            android:fontFamily="@font/poppins_regular"
             android:gravity="center"
             android:text="Continue with Google"
             android:textColor="#FFEDEE"
