--- a/app/src/main/res/layout/home_slider_item.xml
+++ b/app/src/main/res/layout/home_slider_item.xml
@@ -28,33 +28,44 @@
         android:id="@+id/home_slider_prime_icon_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="20dp"
-        app:cardBackgroundColor="#A37E2C"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="16dp"
+        android:elevation="20dp"
         app:cardCornerRadius="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/home_slider_prime_icon"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:paddingStart="6dp"
-            android:paddingTop="4dp"
-            android:paddingEnd="6dp"
-            android:paddingBottom="6dp"
-            app:srcCompat="@drawable/ic_prime"
-            app:tint="@color/black" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/prime_bg">
+
+            <ImageView
+                android:id="@+id/home_slider_prime_icon"
+                android:layout_width="23dp"
+                android:layout_height="23dp"
+                android:paddingStart="6dp"
+                android:paddingTop="4dp"
+                android:paddingEnd="6dp"
+                android:paddingBottom="6dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_prime"
+                app:tint="@color/black" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/home_slider_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="18dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="12dp"
-        android:fontFamily="@font/bold"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/gilroy_bold"
         android:text="1947 (2017)"
         android:textColor="@color/white"
         android:textSize="18sp"
