--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -53,55 +53,33 @@
         app:layout_constraintBottom_toTopOf="@+id/signin_title1"
         app:layout_constraintStart_toStartOf="@+id/sigin_guideline" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/signin_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="28dp"
-        android:background="@drawable/button_background"
+        android:layout_marginBottom="24dp"
+        android:backgroundTint="#A4070E"
+        android:text="Continue with Google"
+        android:textColor="#FFEDEE"
+        android:textSize="14sp"
+        app:cornerRadius="8dp"
+        app:icon="@drawable/ic_google"
+        app:iconGravity="start"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/sigin_guideline">
-
-        <TextView
-            android:id="@+id/signin_google_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="7dp"
-            android:fontFamily="@font/poppins_regular"
-            android:gravity="center"
-            android:text="Continue with Google"
-            android:textColor="#FFEDEE"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/signin_google_ic"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/signin_google_ic"
-            android:layout_width="18dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_google"
-            app:tint="#FFF0F1" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:rippleColor="#C3292F" />
 
     <ImageView
         android:id="@+id/signin_ott_icon1"
         android:layout_width="200dp"
         android:layout_height="80dp"
         android:layout_marginStart="-3dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="12dp"
         android:scaleType="fitStart"
-        app:layout_constraintBottom_toTopOf="@id/signin_button"
+        app:layout_constraintBottom_toTopOf="@+id/signin_button"
         app:layout_constraintStart_toStartOf="@+id/sigin_guideline"
         app:srcCompat="@drawable/ott_icons1" />
 
