--- a/app/src/main/res/layout/popular_series_item.xml
+++ b/app/src/main/res/layout/popular_series_item.xml
@@ -6,13 +6,13 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="180dp"
-        android:layout_height="250dp"
+        android:layout_width="145dp"
+        android:layout_height="200dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
-        app:cardBackgroundColor="@color/background"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
+        android:background="@color/background"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +24,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/top10_image"
+                android:id="@+id/popular_series_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
@@ -35,11 +35,11 @@
                 app:srcCompat="@drawable/sample_image4" />
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/top10_prime_icon_layout"
+                android:id="@+id/popular_series_prime_icon_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="6dp"
                 android:elevation="20dp"
                 app:cardCornerRadius="18dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -51,13 +51,13 @@
                     android:background="@drawable/prime_bg">
 
                     <ImageView
-                        android:id="@+id/top10_prime_icon"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:paddingStart="5dp"
-                        android:paddingTop="4dp"
-                        android:paddingEnd="5dp"
-                        android:paddingBottom="5dp"
+                        android:id="@+id/popular_series_prime_icon"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:paddingStart="4dp"
+                        android:paddingTop="3dp"
+                        android:paddingEnd="4dp"
+                        android:paddingBottom="4dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -67,30 +67,6 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
-
-            <ImageView
-                android:id="@+id/top10_image_gradient"
-                android:layout_width="0dp"
-                android:layout_height="100dp"
-                android:alpha="0.5"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:srcCompat="@drawable/home_slider_img_gradient" />
-
-            <TextView
-                android:id="@+id/top10_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="-20dp"
-                android:alpha="0.8"
-                android:fontFamily="@font/gilroy_bold"
-                android:text="1"
-                android:textColor="@color/white"
-                android:textSize="100sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
