--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -96,7 +96,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
                 android:orientation="vertical"
-                app:layout_constraintBottom_toTopOf="@id/about_profile_barrier"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -113,8 +113,8 @@
                     android:id="@+id/about_name_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="5dp"
                     android:layout_marginTop="-3dp"
+                    android:layout_marginEnd="5dp"
                     android:fontFamily="@font/poppins_bold"
                     android:text="Raj Maru"
                     android:textColor="@color/text_title"
@@ -134,8 +134,8 @@
                     android:id="@+id/about_email_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="5dp"
                     android:layout_marginTop="-3dp"
+                    android:layout_marginEnd="5dp"
                     android:fontFamily="@font/poppins_bold"
                     android:text="Rajmaru0304@gmail.com"
                     android:textColor="@color/text_title"
@@ -144,9 +144,182 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/about_profile_prime_layout"
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/about_current_plan_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:cardBackgroundColor="@color/surface"
+        app:cardElevation="2dp"
+        app:layout_constraintEnd_toEndOf="@id/about_guideline_right"
+        app:layout_constraintStart_toStartOf="@id/about_guideline_left"
+        app:layout_constraintTop_toBottomOf="@id/about_profile_layout"
+        app:strokeWidth="0dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/about_current_plan_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/poppins_regular"
+                android:text="Current plan"
+                android:textColor="@color/text_subtitle"
+                android:textSize="10sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/about_current_plan_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-3dp"
+                android:fontFamily="@font/poppins_bold"
+                android:text="Free"
+                android:textColor="@color/text_title"
+                android:textSize="22sp"
+                app:layout_constraintStart_toStartOf="@+id/about_current_plan_title"
+                app:layout_constraintTop_toBottomOf="@+id/about_current_plan_title" />
+
+            <TextView
+                android:id="@+id/about_days_left_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="2dp"
+                android:alpha="0.5"
+                android:fontFamily="@font/poppins_regular"
+                android:text="1 day left"
+                android:textColor="@color/text_title"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="@+id/about_current_plan_tv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/about_current_plan_tv" />
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toTopOf="@id/about_current_plan_barrier1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/about_current_plan_tv">
+
+                <ImageView
+                    android:id="@+id/about_free_movies_tick"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_tick_filled"
+                    app:tint="@color/active_icon_tick" />
+
+                <TextView
+                    android:id="@+id/about_free_movies_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="3dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="Free Movies / Series"
+                    android:textColor="@color/text_subtitle"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/about_free_movies_tick"
+                    app:layout_constraintStart_toEndOf="@+id/about_free_movies_tick"
+                    app:layout_constraintTop_toTopOf="@id/about_free_movies_tick" />
+
+                <ImageView
+                    android:id="@+id/about_live_tv_tick"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toStartOf="@+id/about_free_movies_tick"
+                    app:layout_constraintTop_toBottomOf="@+id/about_free_movies_tick"
+                    app:srcCompat="@drawable/ic_tick_filled"
+                    app:tint="@color/inactive_icon_tick" />
+
+                <TextView
+                    android:id="@+id/about_live_tv_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="Live TV"
+                    android:textColor="@color/text_subtitle"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/about_live_tv_tick"
+                    app:layout_constraintStart_toStartOf="@+id/about_free_movies_title"
+                    app:layout_constraintTop_toTopOf="@+id/about_live_tv_tick" />
+
+                <ImageView
+                    android:id="@+id/about_prime_movies_tick"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toStartOf="@+id/about_live_tv_tick"
+                    app:layout_constraintTop_toBottomOf="@+id/about_live_tv_tick"
+                    app:srcCompat="@drawable/ic_tick_filled"
+                    app:tint="@color/inactive_icon_tick" />
+
+                <TextView
+                    android:id="@+id/about_prime_movies_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="Prime Movies / Series"
+                    android:textColor="@color/text_subtitle"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/about_prime_movies_tick"
+                    app:layout_constraintStart_toStartOf="@+id/about_live_tv_title"
+                    app:layout_constraintTop_toTopOf="@id/about_prime_movies_tick" />
+
+                <ImageView
+                    android:id="@+id/about_request_movies_tick"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toStartOf="@+id/about_prime_movies_tick"
+                    app:layout_constraintTop_toBottomOf="@+id/about_prime_movies_tick"
+                    app:srcCompat="@drawable/ic_tick_filled"
+                    app:tint="@color/inactive_icon_tick" />
+
+                <TextView
+                    android:id="@+id/about_request_movie_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="Request Movies / Series"
+                    android:textColor="@color/text_subtitle"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/about_request_movies_tick"
+                    app:layout_constraintStart_toStartOf="@+id/about_prime_movies_title"
+                    app:layout_constraintTop_toBottomOf="@+id/about_prime_movies_title"
+                    app:layout_constraintTop_toTopOf="@id/about_request_movies_tick" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/about_current_plan_barrier1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="top"
+                app:constraint_referenced_ids="linearLayout2" />
+
+            <LinearLayout
+                android:id="@+id/linearLayout2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -154,27 +327,21 @@
                 app:layout_constraintStart_toStartOf="parent">
 
                 <TextView
+                    android:id="@+id/about_current_plan_button"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/subs_button_ripple"
                     android:backgroundTint="@color/active_prime_layout"
                     android:clickable="true"
                     android:focusable="true"
                     android:fontFamily="@font/gilroy_bold"
                     android:gravity="center"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:text="Prime Member"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp"
+                    android:text="Recharge"
                     android:textColor="@color/white"
                     android:textSize="14sp" />
             </LinearLayout>
-
-            <androidx.constraintlayout.widget.Barrier
-                android:id="@+id/about_profile_barrier"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:barrierDirection="top"
-                app:constraint_referenced_ids="about_profile_prime_layout" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
