--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="theme">#CD000A</color>
     <color name="background">#F4F4F4</color>
     <color name="surface">#FFFFFF</color>
+    <color name="active_icon_tick">#1CBC1C</color>
+    <color name="inactive_icon_tick">#DADADA</color>
     <color name="active_prime_layout">#DE040F</color>
     <color name="inactive_prime_layout">#7D7D7D</color>
 
