--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -8,6 +8,23 @@
     android:background="@color/background"
     tools:context=".AboutActivity">
 
+    <TextView
+        android:id="@+id/about_app_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="20dp"
+        android:alpha="0.4"
+        android:fontFamily="@font/poppins_regular"
+        android:text="v1.0.1"
+        android:textColor="@color/text_subtitle"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/about_guideline_right"
+        app:layout_constraintStart_toStartOf="@+id/about_guideline_left"
+        app:layout_constraintTop_toBottomOf="@+id/about_prime_movies_title"
+        app:layout_constraintTop_toTopOf="@id/about_request_movies_tick" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/about_guideline_left"
         android:layout_width="wrap_content"
@@ -331,7 +348,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/subs_button_ripple"
-                    android:backgroundTint="@color/active_prime_layout"
+                    android:backgroundTint="@color/recharge_layout"
                     android:clickable="true"
                     android:focusable="true"
                     android:fontFamily="@font/gilroy_bold"
