--- a/app/src/main/res/values-v27/themes.xml
+++ b/app/src/main/res/values-v27/themes.xml
@@ -18,4 +18,13 @@
         <item name="android:windowLightNavigationBar">true</item>
     </style>
 
+    <!-- Ott Activity Theme -->
+    <style name="Theme.Ott" parent="Theme.Vision">
+        <!-- Status bar Transparent -->
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <!-- Navigation bar color -->
+        <item name="android:windowLightNavigationBar">false</item>
+    </style>
+
 </resources>
