--- a/app/src/main/res/layout/activity_tag.xml
+++ b/app/src/main/res/layout/activity_tag.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/tag_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0052B8"
@@ -9,14 +10,26 @@
     tools:context=".TagActivity">
 
     <ImageView
-        android:id="@+id/tag_background"
+        android:id="@+id/tag_background_gradient"
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/disney_background" />
+        app:srcCompat="@drawable/tag_bg_gradient"
+        app:tint="#01013D" />
+
+    <ImageView
+        android:id="@+id/tag_logo"
+        android:layout_width="150dp"
+        android:layout_height="130dp"
+        android:layout_marginTop="90dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/tag_disney_logo" />
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/tag_nested_scrollview"
@@ -41,7 +54,7 @@
                 android:fontFamily="@font/gilroy_bold"
                 android:text="Popular"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -63,7 +76,7 @@
                 android:fontFamily="@font/gilroy_bold"
                 android:text="Movies"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tag_popular_rv" />
 
@@ -85,7 +98,7 @@
                 android:fontFamily="@font/gilroy_bold"
                 android:text="Series"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tag_movies_rv" />
 
