--- a/app/src/main/res/layout/tag_movies_card.xml
+++ b/app/src/main/res/layout/tag_movies_card.xml
@@ -24,9 +24,9 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/ott_card_image"
+                android:id="@+id/tag_card_image"
                 android:layout_width="wrap_content"
-                android:layout_height="270dp"
+                android:layout_height="240dp"
                 android:layout_centerInParent="true"
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY"
@@ -37,7 +37,7 @@
                 app:srcCompat="@drawable/sample_img1" />
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/ott_movie_card_prime_icon_layout"
+                android:id="@+id/tag_movie_card_prime_icon_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
@@ -53,7 +53,7 @@
                     android:background="@drawable/prime_bg">
 
                     <ImageView
-                        android:id="@+id/ott_movie_card_prime_icon"
+                        android:id="@+id/tag_movie_card_prime_icon"
                         android:layout_width="16dp"
                         android:layout_height="16dp"
                         android:paddingStart="4dp"
@@ -69,16 +69,6 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
-
-            <ImageView
-                android:id="@+id/ott_movie_card_image_gradient"
-                android:layout_width="0dp"
-                android:layout_height="100dp"
-                android:alpha="0.6"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:srcCompat="@drawable/home_slider_img_gradient" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
