--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,13 @@
     <color name="theme">#CD000A</color>
     <color name="background">#F4F4F4</color>
     <color name="surface">#FFFFFF</color>
+
     <color name="btm_sheet_background">#F4F4F4</color>
     <color name="btm_sheet_divider">#B9B9B9</color>
     <color name="btm_sheet_surface">#FFFFFF</color>
+
+    <color name="tag_bg_gradient">#01013D</color>
+    <color name="tag_background">#0052B8</color>
 
     <color name="active_icon_tick">#1CBC1C</color>
     <color name="inactive_icon_tick">#DADADA</color>
