--- a/app/src/main/res/layout/pricing_bottom_sheet.xml
+++ b/app/src/main/res/layout/pricing_bottom_sheet.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bottom_sheet_corner"
-    tools:context=".PricingBottomSheet">
+    tools:context=".fragments.PricingBottomSheet">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
