--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@color/background"
-    tools:context=".AboutActivity">
+    tools:context=".activities.AboutActivity">
 
     <TextView
         android:id="@+id/about_app_version"
