--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,7 +33,7 @@
     </style>
 
     <!-- Ott Activity Theme -->
-    <style name="Theme.Ott" parent="Theme.Vision">
+    <style name="Theme.FullScreen" parent="Theme.Vision">
         <!-- Status bar Transparent -->
         <item name="android:windowTranslucentStatus">true</item>
     </style>
