--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -2,26 +2,207 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/movie_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
     android:fitsSystemWindows="true"
     tools:context=".activities.MovieActivity">
 
+    <ImageView
+        android:id="@+id/movie_poster_img"
+        android:layout_width="match_parent"
+        android:layout_height="380dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/sample_img3" />
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/movie_play_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardBackgroundColor="#BD1A1A1A"
+        app:cardCornerRadius="22dp"
+        app:cardElevation="6dp"
+        app:layout_constraintBottom_toBottomOf="@+id/movie_poster_img"
+        app:layout_constraintEnd_toEndOf="@id/movie_poster_img"
+        app:layout_constraintStart_toStartOf="@id/movie_poster_img"
+        app:layout_constraintTop_toTopOf="@+id/movie_poster_img"
+        app:rippleColor="@color/white"
+        app:strokeWidth="0dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/movie_play_button_img"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="6dp"
+                android:layout_marginBottom="6dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0"
+                app:srcCompat="@drawable/ic_play"
+                app:tint="@color/white" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+    <ImageView
+        android:id="@+id/movie_img_top_gradient"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="-20dp"
+        android:alpha="0.8"
+        android:rotation="180"
+        app:layout_constraintEnd_toEndOf="@+id/movie_poster_img"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/home_slider_img_gradient" />
+
+    <ImageView
+        android:id="@+id/movie_img_bottom_gradient"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:alpha="0.7"
+        app:layout_constraintBottom_toBottomOf="@+id/movie_poster_img"
+        app:layout_constraintEnd_toEndOf="@+id/movie_poster_img"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/home_slider_img_gradient" />
+
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/tag_nested_scrollview"
+        android:id="@+id/movie_nested_scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="350dp"
+            android:background="@drawable/movie_drawer_corner">
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/movie_divider"
+                android:layout_width="50dp"
+                android:layout_height="5dp"
+                android:layout_marginTop="10dp"
+                app:cardBackgroundColor="@color/btm_sheet_divider"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/movie_title_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/gilroy_bold"
+                android:text="Aftermath"
+                android:textColor="@color/text_title"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toStartOf="@+id/movie_star_img"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/movie_divider" />
+
+            <ImageView
+                android:id="@+id/movie_star_img"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginEnd="3dp"
+                app:layout_constraintBottom_toBottomOf="@id/movie_ratings_tv"
+                app:layout_constraintEnd_toStartOf="@id/movie_ratings_tv"
+                app:layout_constraintTop_toTopOf="@+id/movie_ratings_tv"
+                app:srcCompat="@drawable/ic_star" />
+
+            <TextView
+                android:id="@+id/movie_ratings_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:fontFamily="@font/gilroy_bold"
+                android:text="4.5"
+                android:textColor="@color/text_title"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@id/movie_title_tv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/movie_title_tv" />
+
+            <TextView
+                android:id="@+id/movie_tags_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/gilroy_regular"
+                android:text="2014 | 2h 30m | Comedy | Drama"
+                android:textColor="@color/text_title"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@+id/movie_title_tv"
+                app:layout_constraintStart_toStartOf="@+id/movie_title_tv"
+                app:layout_constraintTop_toBottomOf="@+id/movie_title_tv" />
+
+            <io.github.glailton.expandabletextview.ExpandableTextView
+                android:id="@+id/movie_desc_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="20dp"
+                android:alpha="0.8"
+                android:fontFamily="@font/gilroy_regular"
+                android:text="A young couple struggling to stay together, when they are offered an amazing deal on a home with a questionable past that would normally be beyond their means. In a final attempt to start fresh as a couple they take the deal."
+                android:textColor="@color/text_subtitle"
+                android:textSize="14sp"
+                app:animDuration="500"
+                app:collapsedLines="5"
+                app:ellipsizeTextColor="#D5808080"
+                app:isExpanded="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/movie_title_tv"
+                app:layout_constraintTop_toBottomOf="@+id/movie_tags_tv"
+                app:readLessText="hide"
+                app:readMoreText="show"
+                app:textMode="line" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/movie_cast_title">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <TextView
+                android:id="@+id/movie_cast_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2000dp"
+                android:fontFamily="@font/gilroy_bold"
+                android:text="Cast"
+                android:textColor="@color/text_title"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="@+id/movie_desc_tv"
+                app:layout_constraintTop_toBottomOf="@+id/movie_desc_tv" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -35,15 +216,15 @@
         android:background="#1A1A1A"
         android:fontFamily="@font/gilroy_bold"
         android:paddingStart="60dp"
-        android:paddingTop="50dp"
+        android:paddingTop="49dp"
         android:paddingBottom="15dp"
         android:text="Aftermath"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/movie_root"
+        app:layout_constraintStart_toStartOf="@+id/movie_root"
+        app:layout_constraintTop_toTopOf="@+id/movie_root" />
 
     <ImageView
         android:id="@+id/movie_back_button"
@@ -56,5 +237,28 @@
         app:srcCompat="@drawable/ic_left_arrow"
         app:tint="@color/white" />
 
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/movie_ott_layout"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="30dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:rippleColor="@color/white"
+        app:strokeWidth="0dp">
+
+        <ImageView
+            android:id="@+id/movie_ott_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/ic_disney_hotstar" />
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
